@@ -59,10 +59,13 @@ public class RangeIntersectionIterator
 
         protected RangeIterator<K, D> buildIterator()
         {
-            // if the range is disjoint we can simply return empty
-            // iterator of any type, because it's not going to produce any results.
+            // if the range is disjoint or we have an intersection with an empty set,
+            // we can simply return an empty iterator, because it's not going to produce any results.
             if (statistics.isDisjoint())
-                return new BounceIntersectionIterator<>(statistics, new PriorityQueue<RangeIterator<K, D>>(1));
+                return new EmptyRangeIterator<>();
+
+            if (rangeCount() == 1)
+                return ranges.poll();
 
             switch (strategy)
             {
